; ModuleID = '/home/carl/AnghaBench/RetroArch/input/drivers/extr_udev_input.c_udev_mouse_get_y.c'
source_filename = "/home/carl/AnghaBench/RetroArch/input/drivers/extr_udev_input.c_udev_mouse_get_y.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_6__ = type { i64, i64, double }
%struct.TYPE_5__ = type { double, i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (double (%struct.TYPE_6__*)* @udev_mouse_get_y to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal double @udev_mouse_get_y(%struct.TYPE_6__* %0) #0 {
  %2 = alloca double, align 8
  %3 = alloca %struct.TYPE_6__*, align 8
  %4 = alloca %struct.TYPE_5__, align 8
  %5 = alloca double, align 8
  %6 = alloca double, align 8
  store %struct.TYPE_6__* %0, %struct.TYPE_6__** %3, align 8
  %7 = call i32 @video_driver_get_viewport_info(%struct.TYPE_5__* %4)
  %8 = icmp ne i32 %7, 0
  br i1 %8, label %10, label %9

9:                                                ; preds = %1
  store double 0.000000e+00, double* %2, align 8
  br label %47

10:                                               ; preds = %1
  %11 = load %struct.TYPE_6__*, %struct.TYPE_6__** %3, align 8
  %12 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %11, i32 0, i32 0
  %13 = load i64, i64* %12, align 8
  %14 = load %struct.TYPE_6__*, %struct.TYPE_6__** %3, align 8
  %15 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %14, i32 0, i32 1
  %16 = load i64, i64* %15, align 8
  %17 = icmp slt i64 %13, %16
  br i1 %17, label %18, label %28

18:                                               ; preds = %10
  %19 = load %struct.TYPE_6__*, %struct.TYPE_6__** %3, align 8
  %20 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %19, i32 0, i32 1
  %21 = load i64, i64* %20, align 8
  %22 = load %struct.TYPE_6__*, %struct.TYPE_6__** %3, align 8
  %23 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %22, i32 0, i32 0
  %24 = load i64, i64* %23, align 8
  %25 = sub nsw i64 %21, %24
  %26 = add nsw i64 %25, 1
  %27 = sitofp i64 %26 to double
  store double %27, double* %5, align 8
  br label %31

28:                                               ; preds = %10
  %29 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %4, i32 0, i32 0
  %30 = load double, double* %29, align 8
  store double %30, double* %5, align 8
  br label %31

31:                                               ; preds = %28, %18
  %32 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %4, i32 0, i32 1
  %33 = load i64, i64* %32, align 8
  %34 = sitofp i64 %33 to double
  %35 = load double, double* %5, align 8
  %36 = fdiv double %34, %35
  %37 = load %struct.TYPE_6__*, %struct.TYPE_6__** %3, align 8
  %38 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %37, i32 0, i32 2
  %39 = load double, double* %38, align 8
  %40 = fmul double %36, %39
  store double %40, double* %6, align 8
  %41 = load double, double* %6, align 8
  %42 = load double, double* %6, align 8
  %43 = fcmp olt double %42, 0.000000e+00
  %44 = zext i1 %43 to i64
  %45 = select i1 %43, double -5.000000e-01, double 5.000000e-01
  %46 = fadd double %41, %45
  store double %46, double* %2, align 8
  br label %47

47:                                               ; preds = %31, %9
  %48 = load double, double* %2, align 8
  ret double %48
}

declare dso_local i32 @video_driver_get_viewport_info(%struct.TYPE_5__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
